# todolist

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: actions.yaml
bot/: models.py  serializers.py  urls.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  models.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py  0005_alter_board_created_alter_board_updated_and_more.py
pg_data/: postmaster.pid
pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
pg_data/base/16384/: 1247  1249  1259  1259_fsm  16387  16388  16392  16393  16395  16396  16399  16401  16403  16404  16407  16409  16417  16421  16423  16430  16444  16445  16449  16457  16459  16465  16469  16486  16500  16506  16519  16520  16529  2224  2579  2606  2606_fsm  2608  2610  2610_fsm  (+22 more)
pg_data/base/5/: 2619  pg_internal.init
pg_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
tests/: conftest.py  factories.py  test_cores.py
tests/test_goals/: test_boards.py  test_goal_categories.py  test_goal_comments.py  test_goals.py
todolist/: asgi.py  settings.py  urls.py  wsgi.py
